<?xml version="1.0"?>
<package format="2">
  <name>node_test</name>
  <version>0.0.1</version>
  <description>Additiional testing tools at node level</description>

  <maintainer email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</maintainer>

  <license>Apache 2.0</license>

  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rospy_message_converter</depend>
  <test_depend>roslint</test_depend>
  <build_depend>rostest</build_depend>

</package>
