<?xml version="1.0"?>
<package format="2">
  <name>test_service</name>
  <version>0.0.0</version>
  <description>ROSTest for services</description>

  <maintainer email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</maintainer>

  <license>beerware</license>

  <author email="anthony.remazeilles@tecnalia.com">Anthony Remazeilles</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rospy_message_converter</depend>
  <test_depend>roslint</test_depend>

</package>
